--- a/Rosovina/Modules/Onboarding/OnboardingViewController.xib
+++ b/Rosovina/Modules/Onboarding/OnboardingViewController.xib
@@ -3,6 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,6 +13,7 @@
             <connections>
                 <outlet property="container" destination="AOF-cA-MNq" id="ltb-0D-4v5"/>
                 <outlet property="getStartedButton" destination="1gf-Vz-1XR" id="NrK-wJ-YTp"/>
+                <outlet property="getStartedView" destination="AgD-tg-INf" id="TtP-Am-cBz"/>
                 <outlet property="skipButton" destination="ESW-8G-WVg" id="S9w-nq-WQS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -30,8 +32,8 @@
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="99" translatesAutoresizingMaskIntoConstraints="NO" id="5QR-NF-rOz">
                     <rect key="frame" x="24" y="749" width="345" height="51"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gf-Vz-1XR">
-                            <rect key="frame" x="0.0" y="0.0" width="203" height="51"/>
+                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gf-Vz-1XR">
+                            <rect key="frame" x="-203" y="0.0" width="203" height="51"/>
                             <color key="backgroundColor" red="0.21176470588235294" green="0.21568627450980393" blue="0.29411764705882354" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="51" id="8Ia-fj-gPC"/>
@@ -41,17 +43,52 @@
                             <state key="normal" title="Get Started" image="arrow-new">
                                 <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="get_started"/>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="getStartedClicked:" destination="-1" eventType="touchUpInside" id="4EA-O6-AHn"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AgD-tg-INf">
+                            <rect key="frame" x="0.0" y="0.0" width="200" height="51"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="26" translatesAutoresizingMaskIntoConstraints="NO" id="yvD-dj-e4P">
+                                    <rect key="frame" x="30.666666666666657" y="15.666666666666629" width="139" height="20"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow-new" translatesAutoresizingMaskIntoConstraints="NO" id="h22-LJ-UxC">
+                                            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="20" id="4OM-Tp-7X1"/>
+                                                <constraint firstAttribute="width" constant="20" id="vMc-XC-a43"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Get Started" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PBm-mX-7u6">
+                                            <rect key="frame" x="46" y="0.0" width="93" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                            <color key="backgroundColor" name="AccentColor"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="200" id="F8X-1Q-iKH"/>
+                                <constraint firstItem="yvD-dj-e4P" firstAttribute="centerY" secondItem="AgD-tg-INf" secondAttribute="centerY" id="MzU-iJ-vKZ"/>
+                                <constraint firstItem="yvD-dj-e4P" firstAttribute="centerX" secondItem="AgD-tg-INf" secondAttribute="centerX" id="ejT-3j-xXn"/>
+                            </constraints>
+                        </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ESW-8G-WVg">
-                            <rect key="frame" x="302" y="0.0" width="43" height="51"/>
+                            <rect key="frame" x="299" y="0.0" width="46" height="51"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" title="Skip">
                                 <color key="titleColor" red="0.21176470589999999" green="0.2156862745" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="skip"/>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="skipClicked:" destination="-1" eventType="touchUpInside" id="Pez-wj-NsV"/>
                             </connections>
@@ -66,6 +103,9 @@
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
                             <color key="textColor" red="0.28235294117647058" green="0.39215686274509803" blue="0.47843137254901957" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="welcome_to"/>
+                            </userDefinedRuntimeAttributes>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="q9E-Qm-OPn">
                             <rect key="frame" x="0.0" y="57.666666666666622" width="297.33333333333331" height="92.333333333333314"/>
@@ -77,12 +117,18 @@ flowers &amp; gift store</string>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="37"/>
                                     <color key="textColor" red="0.21176470588235294" green="0.21568627450980393" blue="0.29411764705882354" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="app_name"/>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="flowers &amp; gift store" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w1c-6V-09t">
                                     <rect key="frame" x="0.0" y="49.333333333333371" width="297.33333333333331" height="43"/>
                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="36"/>
                                     <color key="textColor" red="0.28235294119999998" green="0.3921568627" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="flowers_gift_store"/>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
                         </stackView>
@@ -106,6 +152,9 @@ flowers &amp; gift store</string>
     </objects>
     <resources>
         <image name="arrow-new" width="23" height="23"/>
+        <namedColor name="AccentColor">
+            <color red="0.17599999904632568" green="0.19200000166893005" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
