--- a/Rosovina/Modules/Profile/Views/LocationPickerView.xib
+++ b/Rosovina/Modules/Profile/Views/LocationPickerView.xib
@@ -82,6 +82,9 @@
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                     <color key="textColor" name="AccentColor"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="deliver_to2"/>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10 Saad El-Deen Omar, uckstep, El Nozha, Cairo Governorate " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elW-zF-p6O">
                                     <rect key="frame" x="20" y="40" width="365" height="38.333333333333343"/>
@@ -99,6 +102,9 @@
                                     <buttonConfiguration key="configuration" style="plain" title="Confirm">
                                         <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </buttonConfiguration>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="confirm"/>
+                                    </userDefinedRuntimeAttributes>
                                     <connections>
                                         <action selector="confirmLocation:" destination="-1" eventType="touchUpInside" id="ykE-OZ-4ME"/>
                                     </connections>
