--- a/Rosovina/Modules/Profile/Views/SettingsView.xib
+++ b/Rosovina/Modules/Profile/Views/SettingsView.xib
@@ -11,6 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsView" customModule="Rosovina" customModuleProvider="target">
             <connections>
                 <outlet property="backButton" destination="Cmx-LS-I1w" id="lPH-LD-A8z"/>
+                <outlet property="container" destination="Z3d-h3-rnx" id="khW-uB-aKq"/>
                 <outlet property="languageView" destination="Z3d-h3-rnx" id="bGF-dg-EdQ"/>
                 <outlet property="privacyView" destination="58d-Yy-m1v" id="GpO-6Y-eZf"/>
                 <outlet property="returnView" destination="LWY-la-Kn9" id="f99-9z-8Bf"/>
@@ -49,6 +50,9 @@
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                             <color key="textColor" red="0.1764705882" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="setting"/>
+                            </userDefinedRuntimeAttributes>
                         </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,6 +69,9 @@
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                     <color key="textColor" red="0.1764705882" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="notification"/>
+                    </userDefinedRuntimeAttributes>
                 </label>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="jpi-f7-vMZ">
                     <rect key="frame" x="16" y="173.66666666666666" width="176.66666666666666" height="116.99999999999997"/>
@@ -82,6 +89,9 @@
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="app_notification"/>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
                         </stackView>
@@ -98,6 +108,9 @@
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="mobile_notification"/>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
                         </stackView>
@@ -114,6 +127,9 @@
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="offer_notification"/>
+                                    </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
                         </stackView>
@@ -127,33 +143,16 @@
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                             <color key="textColor" red="0.1764705882" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="language"/>
+                            </userDefinedRuntimeAttributes>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z3d-h3-rnx">
                             <rect key="frame" x="0.0" y="37.666666666666629" width="361" height="50"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Polygon 2" translatesAutoresizingMaskIntoConstraints="NO" id="S9B-iM-HKz">
-                                    <rect key="frame" x="340" y="20" width="13" height="10"/>
-                                    <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="13" id="mbC-CZ-p2e"/>
-                                        <constraint firstAttribute="height" constant="10" id="zox-Kl-4hq"/>
-                                    </constraints>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="English" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIV-Lt-6Ch">
-                                    <rect key="frame" x="8.0000000000000036" y="15.333333333333369" width="52.333333333333343" height="19.333333333333329"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <color key="textColor" red="0.1764705882" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="S9B-iM-HKz" firstAttribute="centerY" secondItem="Z3d-h3-rnx" secondAttribute="centerY" id="3jG-Ya-Ddu"/>
-                                <constraint firstItem="PIV-Lt-6Ch" firstAttribute="leading" secondItem="Z3d-h3-rnx" secondAttribute="leading" constant="8" id="BfC-bU-XG1"/>
                                 <constraint firstAttribute="height" constant="50" id="MT4-iV-1xo"/>
                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="WYW-FG-xkM"/>
-                                <constraint firstItem="PIV-Lt-6Ch" firstAttribute="centerY" secondItem="Z3d-h3-rnx" secondAttribute="centerY" id="kjU-o1-3hO"/>
-                                <constraint firstAttribute="trailing" secondItem="S9B-iM-HKz" secondAttribute="trailing" constant="8" id="s4u-d6-FLM"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -183,6 +182,9 @@
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" red="0.28235294119999998" green="0.3921568627" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="term_and_condition"/>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
                                     </subviews>
                                     <constraints>
@@ -195,6 +197,9 @@
                                         <constraint firstAttribute="width" constant="8" id="S92-Xd-9Cl"/>
                                         <constraint firstAttribute="height" constant="14" id="etx-PP-yRi"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="invertedLoc" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -243,6 +248,9 @@
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" red="0.28235294119999998" green="0.3921568627" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="privacy_policy"/>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
                                     </subviews>
                                 </stackView>
@@ -252,6 +260,9 @@
                                         <constraint firstAttribute="height" constant="14" id="7qx-jo-pkB"/>
                                         <constraint firstAttribute="width" constant="8" id="WTC-HU-FRz"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="invertedLoc" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -300,6 +311,9 @@
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                             <color key="textColor" red="0.28235294119999998" green="0.3921568627" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="return_policy"/>
+                                            </userDefinedRuntimeAttributes>
                                         </label>
                                     </subviews>
                                 </stackView>
@@ -309,6 +323,9 @@
                                         <constraint firstAttribute="height" constant="14" id="aqV-QQ-BVq"/>
                                         <constraint firstAttribute="width" constant="8" id="nPB-tj-wOB"/>
                                     </constraints>
+                                    <userDefinedRuntimeAttributes>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="invertedLoc" value="YES"/>
+                                    </userDefinedRuntimeAttributes>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -348,7 +365,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Polygon 2" width="9.6666669845581055" height="7"/>
         <image name="arrow" width="24" height="21.666666030883789"/>
         <image name="down" width="8" height="14"/>
         <systemColor name="systemBackgroundColor">
